--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -70,7 +70,7 @@
   }
 
   .project-block h2 {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
   }
 
   .project-block p {
@@ -80,13 +80,13 @@
 
 
 .projects-header {
-  margin-top: 50px;
+  margin-top: 12px;
   margin-bottom: 40px;
   text-align: center;
 }
 
 .projects-header .greeting {
-  font-size: clamp(1rem, 5vw, 4rem);
+  font-size: clamp(2rem, 5vw, 4rem);
   font-family: 'Courier New', monospace;
   font-style: bold;
   color: white;
@@ -95,7 +95,7 @@
 }
 
 .projects-header .typed-subline {
-  font-size: clamp(1rem, 4.5vw, 2.5rem);
+  font-size: clamp(1.5rem, 4.5vw, 2.5rem);
   font-weight: bold;
   color: black;
   font-family: 'Courier New', monospace;
